--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "node-isbn": "^1.2.0",
     "serve-favicon": "~2.3.0",
     "sqlite3": "^3.1.3",
     "term-spinner": "^1.0.0"
