--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "isbndbjs": "^1.0.2",
     "morgan": "~1.6.1",
     "node-isbn": "^1.2.0",
     "serve-favicon": "~2.3.0",
